--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ApplianceActivity">
-
-        </activity>
+        <activity android:name=".HowtoActivity"></activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".ApplianceActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".AddApplianceActivity"/>
+        <activity android:name=".AddApplianceActivity" />
     </application>
 
 </manifest>
